--- a/W1D1 Pratica/index.html
+++ b/W1D1 Pratica/index.html
@@ -18,16 +18,16 @@
 
     <section>
         <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
-        <p id="wow">Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart cranberries, and creamy brie. It will become your new favorite holiday starter!</p>
+        <p>Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart cranberries, and creamy brie. It will become your new favorite holiday starter!</p>
         <img src="assets/immagine.webp" alt="Immagine in evidenza">
         <span>Image: Sally Vegas</span>
         
         <div>
-            <p id="featured">FEATURED IN:</p>
-            <u id="fresh">Fresh Cranberry Recipes That Go Beyond Sauce</u>
+            <p>FEATURED IN:</p>
+            <u>Fresh Cranberry Recipes That Go Beyond Sauce</u>
         </div>
         <h2>Ingredients</h2>
-        <p class="spaziatura">For the Focaccia:</p>
+        <p class="titolo-ingredienti">For the Focaccia:</p>
         <ul>
             <li>4 cups (500g) all-purpose flour</li>
             <li>11/2 teaspoons instant yeast</li>
@@ -36,7 +36,7 @@
             <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
         </ul>
 
-        <p class="spaziatura">For the topping:</p>
+        <p class="titolo-ingredienti">For the topping:</p>
         <ul>
             <li>3 medium yellow onions, thinly sliced</li>
             <li>1 tablespoon balsamic vinegar</li>
@@ -49,7 +49,7 @@
         <h2>Method</h2>
         <ol>
             <li>
-                <p id="make">Make the focaccia dough</p>
+                <p id="titolo-method">Make the focaccia dough</p>
                 <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need to actually knead the dough, though I sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the flour..</p>
             </li>
         </ol>
